// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/Select Check snapshots should renders correctly 1`] = `
<div
  className="consonant-select"
>
  <button
    className="consonant-select--btn"
    data-testid="select-button"
    onBlur={[MockFunction]}
    onClick={[MockFunction]}
    type="button"
  >
    Please select
  </button>
  <div
    className="consonant-select--options"
  >
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 1
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 2
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 3
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 4
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 5
    </button>
  </div>
</div>
`;

exports[`Consonant/Select Check snapshots should renders correctly opened select 1`] = `
<div
  className="consonant-select"
>
  <button
    className="consonant-select--btn consonant-select--btn_active"
    data-testid="select-button"
    onBlur={[MockFunction]}
    onClick={[MockFunction]}
    type="button"
  >
    Please select
  </button>
  <div
    className="consonant-select--options"
  >
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 1
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 2
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 3
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 4
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 5
    </button>
  </div>
</div>
`;

exports[`Consonant/Select Check snapshots should renders correctly with autoWidth 1`] = `
<div
  className="consonant-select consonant-select_auto-width"
>
  <button
    className="consonant-select--btn"
    data-testid="select-button"
    onBlur={[MockFunction]}
    onClick={[MockFunction]}
    type="button"
  >
    Please select
  </button>
  <div
    className="consonant-select--options"
  >
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 1
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 2
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 3
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 4
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 5
    </button>
  </div>
</div>
`;

exports[`Consonant/Select Check snapshots should renders correctly with selected option 1`] = `
<div
  className="consonant-select"
>
  <button
    className="consonant-select--btn"
    data-testid="select-button"
    onBlur={[MockFunction]}
    onClick={[MockFunction]}
    type="button"
  >
    label 1
  </button>
  <div
    className="consonant-select--options"
  >
    <button
      className="consonant-select--option consonant-select--option_selected"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 1
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 2
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 3
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 4
    </button>
    <button
      className="consonant-select--option"
      data-testid="select-option"
      onClick={[Function]}
      type="button"
    >
      label 5
    </button>
  </div>
</div>
`;
